UI (bgs): fix missing margins on minion selection popup

--- a/core/src/css/component/battlegrounds/battles/bgs-simulator-minion-selection.component.scss
+++ b/core/src/css/component/battlegrounds/battles/bgs-simulator-minion-selection.component.scss
@@ -225,13 +225,14 @@
 			}
 
 			.filter {
-
 				::ng-deep filter-dropdown {
 					width: 100%;
 				}
 			}
 
-			.tribe-filter {
+			.tribe-filter,
+			.tier-filter {
+				margin-right: 15px;
 			}
 
 			label {
